fixed dynhamic load item bug

--- a/src/app/component/dynamic-load-item.ejs
+++ b/src/app/component/dynamic-load-item.ejs
@@ -4,17 +4,15 @@
 	var nth = stream (+ args .nth);
 	var item = stream (args .item);
 
-	self .nth__from = nth;
-	self .item__from = item;
+	self .nth__from = nth .thru (tap, known_as ('nth'));
+	self .item__from = item .thru (tap, known_as ('item'));
 	
-	self .one ('updated', function () {
-		self .on ('updated', function () {
-			if (! args .garbage) {
-				nth (+ args .nth);
-				item (args .item);
-			}
-		})
-	});
+	self .on ('updated', function () {
+		if (! args .garbage) {
+			nth (+ args .nth);
+			item (args .item);
+		}
+	})
 
 	//self .on ('mount', function () { log ('args refreshed'); });
 	
